поправил методы перезагрузил сваггер
